--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="bottom_nav">70dp</dimen>
+
+    <dimen name="barcode_box_stroke_width">4dp</dimen>
+    <dimen name="barcode_box_corner_radius">8dp</dimen>
 </resources>
