--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,13 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
-    <color name="purple_200">#FFBB86FC</color>
+<resources xmlns:tools="http://schemas.android.com/tools">
+    <color name="primary">@color/colorPsbAccentVariant3</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
+    <color name="red">#A00000</color>
+    <color name="gray">#DFDFDF</color>
     <color name="white">#FFFFFFFF</color>
 
     <color name="barcode_reticle_background">#99000000</color>
     <color name="barcode_reticle_stroke">#ffffff</color>
+
+    <color name="colorTransparent">#00000000</color>
+    <color name="colorBlue">#0088DB</color>
+    <color name="colorText">#303C40</color>
+    <color name="colorTextHint">#A0000000</color>
+    <color name="colorInactive">#204F82</color>
+
+    <color name="colorPsbDark">#2e2e40</color>
+    <color name="colorPsbUltraDark">#21233a</color>
+    <color name="colorPsbAccentVariant1">#f26121</color>
+    <color name="colorPsbAccentVariant2">#e25111</color>
+    <color name="colorPsbAccentVariant3">#ff7131</color>
 </resources>
