--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,16 +1,54 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
+<resources>
+
     <style name="Theme.SportsApp" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
+        <item name="colorPrimary">@color/primary</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
         <item name="colorOnPrimary">@color/white</item>
-        <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
-        <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
-        <!-- Customize your theme here. -->
+        <item name="android:windowBackground">@color/colorPsbUltraDark</item>
+        <item name="android:windowTranslucentStatus">true</item>
+        <item name="android:windowTranslucentNavigation">true</item>
+        <item name="android:windowFullscreen">true</item>
+        <item name="textInputStyle">@style/CustomInputLayoutStyle</item>
+        <item name="materialButtonStyle">@style/CustomButtonStyle</item>
+    </style>
+
+    <style name="EditTextStyle">
+        <item name="colorControlNormal">@color/colorPsbAccentVariant1</item>
+        <item name="colorControlActivated">@color/colorPsbAccentVariant1</item>
+        <item name="colorControlHighlight">@color/colorPsbAccentVariant1</item>
+    </style>
+
+    <style name="CustomInputLayoutStyle" parent="Widget.MaterialComponents.TextInputLayout.FilledBox">
+        <item name="android:textColorHint">@color/gray</item>
+        <item name="errorEnabled">true</item>
+        <item name="boxBackgroundColor">@color/colorTransparent</item>
+        <item name="hintTextColor">@color/colorPsbAccentVariant1</item>
+        <item name="colorAccent">@color/colorPsbAccentVariant1</item>
+    </style>
+
+    <style name="CustomButtonStyle" parent="Widget.MaterialComponents.Button">
+        <item name="backgroundTint">@null</item>
+        <item name="rippleColor">@null</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:letterSpacing">0.05</item>
+        <item name="android:background">@drawable/button_background</item>
+    </style>
+
+    <style name="LogoTextStyle">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">36sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="BottomTextStyle">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textColorLink">@color/colorPsbAccentVariant1</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:letterSpacing">0.12</item>
+        <item name="android:lineSpacingExtra">7sp</item>
+        <item name="android:textSize">8sp</item>
     </style>
 </resources>
