--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -7,24 +7,48 @@
     android:fitsSystemWindows="true">
 
     <TextView
-        android:id="@+id/logoTitle"
-        style="@style/LogoTextStyle"
-        android:layout_width="0px"
+        android:id="@+id/iconText"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="Тут какой-то текст"
-        app:layout_constraintBottom_toTopOf="@id/id_input"
+        android:text="@string/login_label"
+        android:textColor="@color/black"
+        android:textSize="10sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@id/icon"
+        app:layout_constraintEnd_toEndOf="@id/icon" />
+
+    <ImageView
+        android:id="@+id/icon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_logo"
+        app:layout_constraintBottom_toTopOf="@id/loginTitle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_chainStyle="packed" />
+
+    <TextView
+        android:id="@+id/loginTitle"
+        style="@style/XXLargeText"
+        android:layout_width="0px"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:gravity="center"
+        android:text="@string/login_title"
+        app:layout_constraintBottom_toTopOf="@id/idInput"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/icon"
         app:layout_constraintVertical_bias="0.6" />
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/id_input"
+        android:id="@+id/idInput"
         android:layout_width="0px"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
         android:hint="@string/hint_id"
+        app:errorIconDrawable="@null"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,49 +59,57 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/colorTransparent"
+            android:imeOptions="actionNext"
             android:inputType="textPersonName"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:textColorHint="@color/white" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/passwordInput"
         android:layout_width="0px"
+        app:errorIconDrawable="@null"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
         android:hint="@string/hint_password"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/id_input">
+        app:layout_constraintTop_toBottomOf="@id/idInput">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/passwordInputText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/colorTransparent"
+            android:imeOptions="actionDone"
             android:inputType="numberPassword"
-            android:textColor="@color/white" />
+            android:textColor="@color/black" />
     </com.google.android.material.textfield.TextInputLayout>
 
-    <com.google.android.material.button.MaterialButton
+    <TextView
         android:id="@+id/nextButton"
-        android:layout_width="match_parent"
+        style="@style/ButtonText"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginBottom="30dp"
-        android:text="@string/button_next"
-        app:layout_constraintBottom_toTopOf="@id/linkText"
-        app:layout_constraintTop_toBottomOf="@id/passwordInput"
-        app:layout_constraintVertical_bias="1" />
+        android:background="?attr/selectableItemBackground"
+        android:clickable="true"
+        android:padding="5dp"
+        android:text="@string/login_next"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/passwordInput" />
 
     <TextView
         android:id="@+id/linkText"
-        style="@style/BottomTextStyle"
-        android:layout_width="match_parent"
+        style="@style/NormalTextSecondary"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="40dp"
         android:layout_marginBottom="30dp"
-        android:text="@string/text_link"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        android:background="?attr/selectableItemBackground"
+        android:clickable="true"
+        android:padding="5dp"
+        android:text="@string/text_forgot"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
