--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -11,6 +11,17 @@
         <item name="android:windowTranslucentNavigation">true</item>
         <item name="android:windowFullscreen">true</item>
         <item name="textInputStyle">@style/CustomInputLayoutStyle</item>
+        <item name="materialButtonStyle">@style/CustomButtonStyle</item>
+    </style>
+
+    <style name="CustomButtonStyle" parent="Widget.MaterialComponents.Button.OutlinedButton">
+        <item name="android:textSize">18sp</item>
+        <item name="android:letterSpacing">0.05</item>
+        <item name="strokeColor">@color/black</item>
+        <item name="strokeWidth">3dp</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textStyle">bold</item>
     </style>
 
     <style name="CustomInputLayoutStyle" parent="Widget.MaterialComponents.TextInputLayout.FilledBox">
@@ -36,6 +47,12 @@
         <item name="android:textSize">15sp</item>
     </style>
 
+    <style name="XXXLargeText">
+        <item name="android:textSize">36sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+
     <style name="XXLargeText">
         <item name="android:textSize">22sp</item>
         <item name="android:textStyle">bold</item>
@@ -44,6 +61,11 @@
 
     <style name="LargeText">
         <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+
+    <style name="MediumText">
+        <item name="android:textSize">16sp</item>
         <item name="android:textColor">@color/black</item>
     </style>
 
