--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -2,21 +2,21 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/tab1Fragment"
-        android:title="Tab1" />
+        android:title="@string/tab_my_events" />
 
     <item
         android:id="@+id/tab2Fragment"
-        android:title="Tab2" />
+        android:title="@string/tab_activity" />
 
     <item
         android:id="@+id/tab3Fragment"
-        android:title="Tab3" />
+        android:title="@string/tab_news" />
 
     <item
         android:id="@+id/tab4Fragment"
-        android:title="Tab4" />
+        android:title="@string/tab_gifts" />
 
     <item
         android:id="@+id/tab5Fragment"
-        android:title="Tab5" />
+        android:title="@string/tab_profile" />
 </menu>
