--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="red">#A00000</color>
     <color name="gray">#878585</color>
     <color name="grayLight">#E5E5E5</color>
+    <color name="grayUltraLight">#F4F4F4</color>
     <color name="white">#FFFFFFFF</color>
 
     <color name="barcode_reticle_background">#99000000</color>
