+- закончил детальный ивент

--- a/app/src/main/res/layout/fragment_my_event_detail.xml
+++ b/app/src/main/res/layout/fragment_my_event_detail.xml
@@ -19,7 +19,9 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
             android:background="?attr/selectableItemBackground"
+            android:clickable="true"
             android:drawablePadding="10dp"
+            android:paddingHorizontal="2dp"
             android:paddingVertical="10dp"
             android:text="@string/detail_chekin"
             app:drawableStartCompat="@drawable/ic_qr"
