--- a/app/src/main/res/layout/fragment_tabs.xml
+++ b/app/src/main/res/layout/fragment_tabs.xml
@@ -16,7 +16,8 @@
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNav"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/bottom_nav"
+        android:layout_height="wrap_content"
+        android:paddingBottom="16dp"
         android:layout_gravity="bottom"
         android:background="@color/grayUltraLight"
         android:elevation="12dp"
