--- a/app/src/main/res/layout/event_item.xml
+++ b/app/src/main/res/layout/event_item.xml
@@ -42,7 +42,11 @@
 
         <TextView
             android:id="@+id/role"
-            android:layout_width="wrap_content"
+            style="@style/SmallText"
+            app:layout_constraintStart_toEndOf="@id/timeText"
+            android:layout_width="0px"
+            android:gravity="end"
+            android:layout_marginStart="8dp"
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
