экран активностей и событий

--- a/app/src/main/res/layout/fragment_gadgets.xml
+++ b/app/src/main/res/layout/fragment_gadgets.xml
@@ -43,7 +43,7 @@
             app:layout_constraintTop_toBottomOf="@id/subTitle" />
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/buttonConnect"
+            android:id="@+id/buttonCancel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
@@ -61,7 +61,7 @@
             android:text="@string/gadgets_desc"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/buttonConnect" />
+            app:layout_constraintTop_toBottomOf="@id/buttonCancel" />
 
         <TextView
             android:id="@+id/buttonNext"
