--- a/app/src/main/res/layout/fragment_my_event_detail.xml
+++ b/app/src/main/res/layout/fragment_my_event_detail.xml
@@ -10,11 +10,10 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingVertical="30dp"
-        android:paddingHorizontal="25dp">
+        android:paddingHorizontal="25dp"
+        android:paddingVertical="30dp">
 
         <TextView
-            android:textStyle="bold"
             android:id="@+id/checkIn"
             style="@style/MediumText"
             android:layout_width="0px"
@@ -24,6 +23,7 @@
             android:drawablePadding="10dp"
             android:paddingVertical="10dp"
             android:text="@string/detail_chekin"
+            android:textStyle="bold"
             app:drawableStartCompat="@drawable/ic_qr"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -31,11 +31,11 @@
 
         <TextView
             android:id="@+id/name"
-            android:maxLines="1"
             style="@style/XXLargeText"
             android:layout_width="0px"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
+            android:maxLines="1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/checkIn"
@@ -86,6 +86,18 @@
             tools:text="Место дворцовая площадь" />
 
         <TextView
+            android:id="@+id/regUntil"
+            style="@style/NormalText"
+            android:layout_width="0px"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:text="@string/detail_register_until"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/place"
+            tools:text="Место дворцовая площадь" />
+
+        <TextView
             android:id="@+id/regStatus"
             style="@style/MediumText"
             android:layout_width="0px"
@@ -94,11 +106,11 @@
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/place"
+            app:layout_constraintTop_toBottomOf="@id/regUntil"
             tools:text="@string/detail_you_are_sport" />
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/buttonConnect"
+            android:id="@+id/buttonCancel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
@@ -106,5 +118,73 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/regStatus" />
+
+        <TextView
+            android:id="@+id/regTitle"
+            style="@style/MediumText"
+            android:layout_width="0px"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:gravity="center"
+            android:text="@string/detail_plan"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/regStatus" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/planButtonSport"
+            android:layout_width="0px"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
+            android:text="@string/detail_sport"
+            app:layout_constraintEnd_toStartOf="@id/planButtonFun"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/regTitle" />
+
+        <TextView
+            android:id="@+id/regSportPoints"
+            style="@style/MediumText"
+            android:layout_width="0px"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:gravity="center"
+            android:text="@string/detail_sport_points"
+            android:textColor="@color/colorPsbAccent"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="@id/planButtonSport"
+            app:layout_constraintStart_toStartOf="@id/planButtonSport"
+            app:layout_constraintTop_toBottomOf="@id/planButtonSport" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/planButtonFun"
+            android:layout_width="0px"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="@string/detail_fun"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/planButtonSport"
+            app:layout_constraintTop_toBottomOf="@id/regTitle" />
+
+        <TextView
+            android:id="@+id/regFunPoints"
+            style="@style/MediumText"
+            android:layout_width="0px"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:gravity="center"
+            android:text="@string/detail_fun_points"
+            android:textColor="@color/colorPsbAccent"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="@id/planButtonFun"
+            app:layout_constraintStart_toStartOf="@id/planButtonFun"
+            app:layout_constraintTop_toBottomOf="@id/planButtonFun" />
+
+        <androidx.constraintlayout.widget.Group
+            android:id="@+id/regGroup"
+            app:constraint_referenced_ids="regFunPoints, regSportPoints, regTitle, planButtonSport, planButtonFun"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
