--- a/app/src/main/res/layout/fragment_my_event_detail.xml
+++ b/app/src/main/res/layout/fragment_my_event_detail.xml
@@ -13,6 +13,15 @@
         android:paddingHorizontal="25dp"
         android:paddingVertical="30dp">
 
+        <ImageView
+            android:id="@+id/close"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:src="@drawable/ic_baseline_close_24"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <TextView
             android:id="@+id/checkIn"
             style="@style/MediumText"
@@ -25,7 +34,7 @@
             android:text="@string/detail_chekin"
             android:textStyle="bold"
             app:drawableStartCompat="@drawable/ic_qr"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/close"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -35,8 +44,9 @@
             android:layout_width="0px"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
+            android:layout_marginEnd="5dp"
             android:maxLines="1"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/close"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/checkIn"
             tools:text="Название мероприятия" />
@@ -183,8 +193,8 @@
 
         <androidx.constraintlayout.widget.Group
             android:id="@+id/regGroup"
-            app:constraint_referenced_ids="regFunPoints, regSportPoints, regTitle, planButtonSport, planButtonFun"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            app:constraint_referenced_ids="regFunPoints, regSportPoints, regTitle, planButtonSport, planButtonFun" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
